--- a/index.html
+++ b/index.html
@@ -2,20 +2,310 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome To Chatgpt Clone</title>
-    <link rel="stylesheet" href="style.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" type="image/svg+xml" href="favicon.ico" />
+    <title>Chatgpt Clone || Home</title>
+    <!-- font-awesome -->
+    <link
+      rel="stylesheet"
+      href="./fontawesome-free-5.12.1-web/css/all.min.css"
+    />
+    <!-- custom css -->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <div id="app">
-      <div id="chat_container"></div>
+    <!-- Navbar -->
+    <!--nav button-->
+    <span class="nav-btn" id="nav-btn">
+      <i class="fas fa-bars"></i>
+    </span>
 
-      <form>
-        <textarea name="prompt" cols="1" rows="1" placeholder="Ask ChatGPT"></textarea>
-        <button type="submit"><img src="assets/send.svg" /></button>
-      </form>
-    </div>
-    <script type="module" src="script.js"></script>
+    <nav class="navbar" id="navbar">
+      <div class="navbar-header">
+        <span class="nav-close" id="nav-close">
+          <i class="fas fa-times"></i>
+        </span>
+      </div>
+
+      <ul class="nav-items">
+        <li><a href="index.html" class="nav-link">home</a></li>
+        <li><a href="skills.html" class="nav-link">skills</a></li>
+        <li><a href="about.html" class="nav-link">about</a></li>
+        <li><a href="services.html" class="nav-link">services</a></li>
+      </ul>
+    </nav>
+    <!--header-->
+    <header class="header">
+      <div class="banner">
+        <h2>Over one hundred flavors of</h2>
+        <h1>
+          Introducing <br/>
+          Chatgpt Clone
+        </h1>
+
+        <a href=" http://localhost:5173/" class="btn banner-btn">
+          explore
+        </a>
+      </div>
+    </header>
+
+    <!--skills section-->
+    <section class="skills clearfix">
+      <!--single skill-->
+      <article class="skill">
+        <span class="skill-icon">
+          <i class="fas fa-envelope"></i>
+        </span>
+        <h4 class="skill-title">crafting effective emails</h4>
+        <p class="skill-text">
+          it will help us to write emails properly and in very 
+          good manner without any errors for us.
+        </p>
+      </article>
+      
+      <!--second skill-->
+      <article class="skill">
+        <span class="skill-icon">
+          <i class="fas fa-regular fa-code"></i>
+        </span>
+        <h4 class="skill-title">help in coding</h4>
+        <p class="skill-text">
+          It also help in writing code in a proper and it 
+          also explains with proper definition also.
+        </p>
+      </article>
+
+      <!--third skill-->
+      <article class="skill">
+        <span class="skill-icon">
+          <i class="fas fa-book-open"></i>
+        </span>
+        <h4 class="skill-title">gain knowledge</h4>
+        <p class="skill-text">
+          It helps you to gain lot of knowledge if you want 
+          to know any kind of general knowledge it will help
+          you in that particular field.
+        </p>
+      </article>
+
+      <!--fourth skill-->
+      <article class="skill">
+        <span class="skill-icon">
+          <i class="fas fa-images"></i>
+        </span>
+        <h4 class="skill-title">generates images</h4>
+        <p class="skill-text">
+          It will help to generate images if we want any images
+          it wiil provide us the link of that particular image that
+          we want.
+        </p>
+      </article>
+    </section>
+
+    <!--about-->
+    <section>
+      <div class="section-center clearfix">
+        <!--about-img -->
+         <article class="about-img">
+          <div class="about-picture-container">
+            <img src="./images/ai-product-1.jpg" alt="tea kettle" class="about-picture"/>
+          </div>
+         </article>
+        <!--about-info -->
+        <article class="about-info">
+          <!--section title -->
+          <div class="section-title">
+            <h3>about us</h3>
+            <h2>chatgpt clone</h2>
+          </div>
+          <p class="about-text">
+            ChatGPT[a] is an artificial intelligence (AI) chatbot developed by OpenAI and released in November 2022.
+            It is built on top of OpenAI's GPT-3.5 and GPT-4 foundational large language models (LLMs) and has been
+            fine-tuned (an approach to transfer learning) using both supervised and reinforcement learning techniques.
+          </p>
+          <p class="about-text">
+            The original release of ChatGPT was based on GPT-3.5. A version based on GPT-4, the newest OpenAI model,
+            was released on March 14, 2023, and is available for paid subscribers on a limited basis.
+          </p>
+          <a href="about.html" class="btn">learn more</a>
+        </article>   
+      </div>
+    </section>
+
+    <!--services-->
+    <section class="services">
+      <!--section title-->
+      <div class="section-title services-title">
+        <h3>explore</h3>
+        <h2>our services</h2>
+      </div>
+
+      <div class="section-center clearfix">
+        <!--single card-->
+        <article class="service-card">
+          <!--img container-->
+          <div class="service-img-container">
+            <img src="./images/ai-product-7.jpg" class="service-img" alt="single service"/>
+
+            <!--service icon-->
+            <span class="service-icon">
+              <i class="fas fa-robot"></i>
+            </span>
+          </div>
+
+          <!--service info-->
+          <div class="service-info">
+            <h4>reliable content</h4>
+            <p>
+              In this you can build your resume, you can create a professional email for yourself and 
+              it will also help you with proper grammer also.
+            </p>
+            <a href="#" class="btn service-btn">read more</a>
+          </div>
+        </article>
+
+         <!--second card-->
+         <article class="service-card">
+          <!--img container-->
+          <div class="service-img-container">
+            <img src="./images/ai-product-5.jpg" class="service-img" alt="single service"/>
+
+            <!--service icon-->
+            <span class="service-icon">
+              <i class="fas fa-memory"></i>
+            </span>
+          </div>
+
+          <!--service info-->
+          <div class="service-info">
+            <h4>Enviroment Friendly</h4>
+            <p>
+              It provides best environment for humans to do their work very efficiently 
+              and easily and its good for employees and college students.
+            </p>
+            <a href="#" class="btn service-btn">read more</a>
+          </div>
+        </article>
+
+         <!--third card-->
+         <article class="service-card">
+          <!--img container-->
+          <div class="service-img-container">
+            <img src="./images/ai-product-6.jpg" class="service-img" alt="single service"/>
+
+            <!--service icon-->
+            <span class="service-icon">
+              <i class="fas fa-microchip"></i>
+            </span>
+          </div>
+
+          <!--service info-->
+          <div class="service-info">
+            <h4>Limitations</h4>
+            <p>
+              It has it own limitations as it will answer one question at a
+              time. As this process is very faster you will get quick replys
+              to your answers.
+            </p>
+            <a href="#" class="btn service-btn">read more</a>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <!--contact-->
+    <section class="contact">
+      <div class="section-center clearfix">
+        <!--contact info-->
+        <article class="contact-info">
+          <!--contact item-->
+          <div class="contact-item">
+            <h4 class="contact-title">
+              <span class="contact-icon">
+                <i class="fas fa-location-arrow"></i>
+              </span>
+              address
+            </h4>
+            <h4 class="contact-text">
+              Chandigarh University <br/>
+              Ghauruan, Mohali, Punjab-140301
+            </h4>
+          </div>
+
+          <!--contact item-->
+          <div class="contact-item">
+            <h4 class="contact-title">
+              <span class="contact-icon">
+                <i class="fas fa-envelope"></i>
+              </span>
+              email
+            </h4>
+            <h4 class="contact-text">
+               email@email.com
+            </h4>
+          </div>
+
+          <!--contact item-->
+          <div class="contact-item">
+            <h4 class="contact-title">
+              <span class="contact-icon">
+                <i class="fas fa-phone"></i>
+              </span>
+              telephone
+            </h4>
+            <h4 class="contact-text">
+              91+ 8976658393
+            </h4>
+          </div>
+
+        </article>
+
+        <!--contact form-->
+        <article class="contact-form">
+          <h3>contact us</h3>
+          <form action="https://formspree.io/f/xyyaokog"
+          method="POST">
+            <div class="form-group">
+              <!--inputs-->
+              <input type="text" placeholder="name" class="form-control" name="name"/>
+
+              <input type="email" placeholder="email" class="form-control" name="email"/>
+
+              <textarea name="message" placeholder="message" class="form-control" i
+              rows="5"></textarea>
+            </div>
+
+            <button type="submit" class="submit-btn btn">submit here</button>
+          </form>
+        </article>
+      </div>
+    </section>
+
+    <!--footer-->
+    <footer class="footer">
+<div class="section-center">
+  <div class="social-icons">
+    <a href="#" class="social-icon">
+      <i class="fab fa-facebook"></i>
+    </a>
+
+    <a href="#" class="social-icon">
+      <i class="fab fa-twitter"></i>
+    </a>
+
+    <a href="#" class="social-icon">
+      <i class="fab fa-instagram"></i>
+    </a>
+  </div>
+  <h4 class="footer-text">&copy; <span id="">2023</span>
+  <span class="companty">chatgpt clone</span>
+  all rights reserved
+  </h4>
+</div>
+    </footer>
+<div class="content-divider"></div>
+
+    <script src="app.js"></script>
   </body>
 </html>
